Organize and include files using partials

--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -1,2 +1,8 @@
-#about
-	p About
+doctype html
+html
+	include partials/_header.pug
+	body
+		h4 About
+		#about
+			p This is the About page.
+		include partials/_footer.pug
