--- a/src/views/contact.pug
+++ b/src/views/contact.pug
@@ -1,2 +1,8 @@
-#contact
-	p Contact
+doctype html
+html
+	include partials/_header.pug
+	body
+		h4 Contact
+		#contact
+			p This is the Contact page.
+		include partials/_footer.pug
