--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,2 +1,8 @@
-#home
-	p Home
+doctype html
+html
+	include partials/_header.pug
+	body
+		h4 Home
+		#home
+			p This is the Home page.
+		include partials/_footer.pug
